--- a/test03/test.css
+++ b/test03/test.css
@@ -108,6 +108,36 @@ body {
    text-align: center;
    flex-shrink: 0;
 }
+.list_wrap[data-type='main'] .list-Name {
+   padding-left: 5px;
+   font-weight: 500;
+   color: #222;
+}
+.list_wrap[data-type='main']:hover {
+   cursor: pointer;
+   background-color: #f9f9f9;
+}
+.list_wrap[data-type='main'] .list-Name::before {
+   display: inline-block;
+   content: '하단삼각형';
+   font-size: 0;
+   width: 0px;
+   height: 0px;
+   border: 4px solid transparent;
+   border-top-color: #9e9e9e;
+   margin-right: 5px;
+   vertical-align: middle;
+}
+.list_wrap[data-type='sub'] {
+   color: #444;
+}
+.list_wrap[data-type='sub'] .list-Name {
+   padding-left: 34px;
+}
+.list_wrap.hidden {
+   background-color: #f9f9f9;
+   opacity: 0.5;
+}
 #list_wrap_clone {
    display: none;
 }
@@ -118,6 +148,9 @@ body {
    width: fit-content;
    max-width: 74%;
    height: calc(100vh - 38px);
+}
+.main-task text {
+   display: none;
 }
 
 /* 일정 박스 스타일 */
